// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationContainer styles When actual page is diferrent that first and last page should render with default styles 1`] = `
.circuit-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-3 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-3:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[disabled],
.circuit-1:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-12 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-10:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-10:hover {
  background-color: #D8DDE1;
}

.circuit-10:hover,
.circuit-10:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-10[disabled],
.circuit-10:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<PaginationContainer
  footer={null}
  onChange={[Function]}
  page={10}
  totalPages={50}
  translate={[Function]}
>
  <Container
    translate={[Function]}
  >
    <div
      className="circuit-18 circuit-19"
    >
      <NavigationButtonPrevious
        disabled={false}
        flat={false}
        href={null}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-3 circuit-0"
          disabled={false}
          flat={false}
          href={null}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-3 circuit-0"
            disabled={false}
            flat={false}
            href={null}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-3 circuit-0"
              disabled={false}
              flat={false}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-0 circuit-1 circuit-2"
                disabled={false}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonPrevious>
      Children Element
      <NavigationButtonNext
        disabled={false}
        flat={false}
        href={null}
        isFirst={false}
        isLast={true}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-12 circuit-9"
          disabled={false}
          flat={false}
          href={null}
          isFirst={false}
          isLast={true}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-12 circuit-9"
            disabled={false}
            flat={false}
            href={null}
            isFirst={false}
            isLast={true}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-12 circuit-9"
              disabled={false}
              flat={false}
              isFirst={false}
              isLast={true}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-9 circuit-10 circuit-2"
                disabled={false}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonNext>
    </div>
  </Container>
</PaginationContainer>
`;

exports[`PaginationContainer styles When the actual page is 1 should render with default styles 1`] = `
.circuit-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-3 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-3:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[disabled],
.circuit-1:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-12 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-10:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-10:hover {
  background-color: #D8DDE1;
}

.circuit-10:hover,
.circuit-10:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-10[disabled],
.circuit-10:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<PaginationContainer
  footer={null}
  onChange={[Function]}
  page={1}
  totalPages={50}
  translate={[Function]}
>
  <Container
    translate={[Function]}
  >
    <div
      className="circuit-18 circuit-19"
    >
      <NavigationButtonPrevious
        disabled={true}
        flat={false}
        href={null}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-3 circuit-0"
          disabled={true}
          flat={false}
          href={null}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-3 circuit-0"
            disabled={true}
            flat={false}
            href={null}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-3 circuit-0"
              disabled={true}
              flat={false}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-0 circuit-1 circuit-2"
                disabled={true}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonPrevious>
      Children Element
      <NavigationButtonNext
        disabled={false}
        flat={false}
        href={null}
        isFirst={false}
        isLast={true}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-12 circuit-9"
          disabled={false}
          flat={false}
          href={null}
          isFirst={false}
          isLast={true}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-12 circuit-9"
            disabled={false}
            flat={false}
            href={null}
            isFirst={false}
            isLast={true}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-12 circuit-9"
              disabled={false}
              flat={false}
              isFirst={false}
              isLast={true}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-9 circuit-10 circuit-2"
                disabled={false}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonNext>
    </div>
  </Container>
</PaginationContainer>
`;

exports[`PaginationContainer styles When the actual page is equal the last page should render with default styles 1`] = `
.circuit-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-3 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-3:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[disabled],
.circuit-1:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-12 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-10:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-10:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-10:hover {
  background-color: #D8DDE1;
}

.circuit-10:hover,
.circuit-10:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-10[disabled],
.circuit-10:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<PaginationContainer
  footer={null}
  onChange={[Function]}
  page={50}
  totalPages={50}
  translate={[Function]}
>
  <Container
    translate={[Function]}
  >
    <div
      className="circuit-18 circuit-19"
    >
      <NavigationButtonPrevious
        disabled={false}
        flat={false}
        href={null}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-3 circuit-0"
          disabled={false}
          flat={false}
          href={null}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-3 circuit-0"
            disabled={false}
            flat={false}
            href={null}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-3 circuit-0"
              disabled={false}
              flat={false}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-0 circuit-1 circuit-2"
                disabled={false}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonPrevious>
      Children Element
      <NavigationButtonNext
        disabled={true}
        flat={false}
        href={null}
        isFirst={false}
        isLast={true}
        onClick={[Function]}
        plain={false}
        primary={false}
        secondary={false}
        size="kilo"
        stretch={false}
        target={null}
      >
        <Button
          className="circuit-12 circuit-9"
          disabled={true}
          flat={false}
          href={null}
          isFirst={false}
          isLast={true}
          onClick={[Function]}
          plain={false}
          primary={false}
          secondary={false}
          size="kilo"
          stretch={false}
          target={null}
        >
          <RegularButton
            className="circuit-12 circuit-9"
            disabled={true}
            flat={false}
            href={null}
            isFirst={false}
            isLast={true}
            onClick={[Function]}
            primary={false}
            secondary={false}
            size="kilo"
            stretch={false}
            target={null}
          >
            <Styled(button)
              className="circuit-12 circuit-9"
              disabled={true}
              flat={false}
              isFirst={false}
              isLast={true}
              onClick={[Function]}
              primary={false}
              secondary={false}
              size="kilo"
              stretch={false}
              target={null}
            >
              <button
                className="circuit-9 circuit-10 circuit-2"
                disabled={true}
                onClick={[Function]}
                size="kilo"
                target={null}
              />
            </Styled(button)>
          </RegularButton>
        </Button>
      </NavigationButtonNext>
    </div>
  </Container>
</PaginationContainer>
`;
